# Document-Intelligence-System

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  rag_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Auth.jsx  Chat.jsx  Home.jsx
