[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "bcrypt>=5.0.0",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "groq>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "ruff>=0.14.13",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
